--- a/Backend/package.json
+++ b/Backend/package.json
@@ -13,9 +13,14 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
-        "express": "^4.18.2"
+        "dotenv": "^17.2.3",
+        "express": "^4.18.2",
+        "mongoose": "^9.1.3"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.6",
+        "@types/mongoose": "^5.11.97",
         "@types/node": "^25.0.3",
         "nodemon": "^3.0.3"
     }
